# auto-clock-speed

./: .SRCINFO  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PKGBUILD  README.md  SECURITY.md  acs.service  acs.toml  build.rs  out.csv
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust-clippy.yml  rust.yml
assets/check-lists/: creating-a-sub-command.md
benches/: display_benchmark.rs  graph_benchmark.rs  setup_benchmark.rs  system_benchmark.rs
docs/: README.es.md
libmsrtools/: CMakeLists.txt  msrr.c
msrtools/: msrr.c
scripts/: battery-benchmark.py  battery_test.py  service_setup.sh
src/: a.out  args.rs  config.rs  cpu.rs  csv.rs  daemon.rs  display.rs  error.rs  gov.rs  graph.rs  interactive.rs  interface.rs  lib.rs  local.rs  logger.rs  main.rs  msr.rs  msrr.c  network.rs  power.rs  proc.rs  rule.rs  security.rs  settings.rs  setup.rs  state.rs  sysfs.rs  system.rs  terminal.rs  thermal.rs
src/network/: hook.rs  listen.rs  send.rs
src/power/: battery.rs  lid.rs
