[package]
name = "autoclockspeed"
version = "0.1.10"
edition = "2021"
license = "MIT OR MPL-2.0"
description = "A utility to check stats about your CPU, and auto regulate clock speeds to help with either performance or battery life."
homepage = "https://github.com/JakeRoggenbuck/auto-clock-speed"
repository = "https://github.com/JakeRoggenbuck/auto-clock-speed"
readme = "README.md"
categories = ["command-line-utilities", "hardware-support"]
keywords = ["clockspeed", "cpu", "battery"]
authors = ["jakeroggenbuck <jakeroggenbuck2@gmail.com", "cameron <cameron.bannasch@gmail.com>", "shuzhengz <treez.zhang@gmail.com>"]

[dependencies]
structopt = { version = "0.3.26", default-features = false }
termion = "1.5.3"
nix = "0.20.2"
chrono = "0.4"
log = "0.4.14"
env_logger = "0.9.0"
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rasciigraph = "0.1.1"
colored = "2"
cached = "0.30.0"
rand = "0.8.5"
globset = "0.4"

[[bin]]
name = "acs"
path = "src/main.rs"
