[package]
name = "autoclockspeed"
version = "0.1.12"
edition = "2021"
license = "MIT OR MPL-2.0"
description = "A utility to check stats about your CPU, and auto regulate clock speeds to help with either performance or battery life."
homepage = "https://github.com/JakeRoggenbuck/auto-clock-speed"
repository = "https://github.com/JakeRoggenbuck/auto-clock-speed"
readme = "README.md"
categories = ["command-line-utilities", "hardware-support"]
keywords = ["clockspeed", "cpu", "battery"]
authors = ["jakeroggenbuck <jakeroggenbuck2@gmail.com", "cameron <cameron.bannasch@gmail.com>", "shuzhengz <treez.zhang@gmail.com>"]

[dependencies]
structopt = { version = "0.3.26", default-features = false }
termion = "2.0.1"
nix = "0.26.2"
log = "0.4.14"
env_logger = "0.10.0"
toml = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
efcl = "0.1.2"
rasciigraph = "0.2.0"
cached = "0.42.0"
rand = "0.8.5"
globset = "0.4"
time = { version = "0.3", features = ["local-offset", "formatting"]}
notify-rust = "4"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bin]]
name = "acs"
path = "src/bin/main.rs"


[[bench]]
name = "system_benchmark"
harness = false

[[bench]]
name = "graph_benchmark"
harness = false
